[package]
name = "distributed_map"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
uuid = { version = "1.8", features = ["v4"] }
tracing-subscriber = "0.3"
hyper = "1.6.0"

