[package]
name = "distributed_map"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
axum = "0.7.9"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
reqwest = { version = "0.12.4", features = ["json", "rustls-tls"] }
rand = "0.9.2"
